# mandelbrot-explorer

./: Cargo.toml  README.md
benches/: simd.rs
src/: backend.rs  colours.rs  lib.rs  main.rs  renderer.rs
