[package]
name = "mandelbrot_explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorsys = "0.6.7"
iced = { version = "0.12.1", features = ["canvas"] }
image = "0.24.8"
num = "0.4.1"
rayon = "1.8.1"
