[package]
name = "mandelbrot_explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorsys = "0.6.7"
divan = "0.1.14"
iced = { version = "0.12.1", features = ["canvas"] }
image = "0.24.9"
num = "0.4.1"
rayon = "1.9.0"

[[bench]]
name = "simd"
harness = false